Fixed double scroll and routing

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -339,7 +339,7 @@ body{
   padding: 0;
   perspective: 1px;
   transform-style: preserve-3d;
-  overflow-y: scroll;
+  //overflow-y: scroll;
   overflow-x: hidden;
   //background: #F6FAFA!important;
   //background: black!important;
